Services/zabbix-agent-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-agent
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-agent
  loadBalancerIP: 10.9.15.20
  ports:
    - name: myport
      port: 10050
      protocol: TCP
      targetPort: 10050
  sessionAffinity: None
  type: LoadBalancer
