Services/zabbix-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-agent
  annotations:
    field.cattle.io/targetWorkloadIds: '["default/zabbix-agent"]'
    management.cattle.io/ui-managed: 'true'
spec:
  type: NodePort
  ports:
  - port: 10050
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-agent
