Services/zabbix-http-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-http-loadbalancer
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.9.15.100
  ports:
    - name: myport
      nodePort: 30748
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-web-nginx-mysql
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 10.9.15.100
