Services/zabbix-proxy-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-proxy
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-proxy-mysql
  loadBalancerIP: 10.9.15.100
  ports:
    - name: myport
      port: 10051
      protocol: TCP
      targetPort: 10051
  type: LoadBalancer
