Services/zabbix-server-mysql-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-mysql
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-server-mysql
  ports:
    - name: myport
      port: 10051
      protocol: TCP
      targetPort: 10051
  type: ClusterIP
