Services/zabbix-snmptraps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-snmptraps
  annotations:
    field.cattle.io/targetWorkloadIds: '["default/zabbix-snmptraps"]'
    management.cattle.io/ui-managed: 'true'
spec:
  type: NodePort
  ports:
  - port: 162
    targetPort: 1162
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-snmptraps
