Services/zabbix-trap-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-trap-loadbalancer
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.9.15.120
  ports:
    - name: myport
      nodePort: 30323
      port: 162
      protocol: UDP
      targetPort: 1162
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-snmptraps
  type: LoadBalancer
