Services/zabbix-web-nginx-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["default/zabbix-web-nginx-mysql"]'
    management.cattle.io/ui-managed: 'true'
  creationTimestamp: '2024-07-02T23:08:58Z'
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/targetWorkloadIds: {}
            f:management.cattle.io/ui-managed: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"c20231be-0756-48d1-9a84-15b9ffb12afc"}: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":8080,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: agent
      operation: Update
  name: zabbix-web-nginx-mysql-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 8080tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-zabbix-web-nginx-mysql
  sessionAffinity: None
  type: ClusterIP
