Services/zabbix-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web-ingress
  annotations:
    #metallb.universe.tf/loadBalancerIPs: 10.9.15.100
    #metallb.universe.tf/address-pool: mymetallbpool
spec:
  ingressClassName: nginx
  rules:
    - host: monitoring.sentracam.net
      http:
        paths:
          - backend:
              service:
                name: zabbix-web-nginx-mysql-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - monitoring.sentracam.net
      secretName: monitoring-tls
